# weixin-bot-python

./: .gitignore  LICENSE  README.md  README.zh.md  pyproject.toml  test_api.py
weixin_bot/: __init__.py  __main__.py  config.py
weixin_bot/api/: client.py
weixin_bot/auth/: accounts.py  login.py
weixin_bot/cdn/: crypto.py  upload.py
weixin_bot/media/: download.py  mime.py
weixin_bot/messaging/: context_token.py  inbound.py  markdown.py  notices.py  send.py  send_media.py  typing.py
weixin_bot/monitor/: loop.py
